--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <!-- Open Graph tags -->
     <meta property="og:title" content="About - By Lacey Richter">
     <meta property="og:description" content="Meet Lacey Richter, photographer specializing in intimate and elegant photography">
-    <meta property="og:image" content="/images/Lacey.jpg">
+    <meta property="og:image" content="/images/photo of myself/photo of myself/lacey.jpeg">
     <meta property="og:type" content="website">
     
     <!-- Fonts -->
@@ -24,7 +24,9 @@
     <header class="header" id="header">
         <div class="header-container">
             <div class="logo">
-                <a href="index.html">By Lacey Richter</a>
+                <a href="index.html">
+                    <img src="images/logo/logo.png" alt="By Lacey Richter Photography" />
+                </a>
             </div>
             <nav class="nav" id="nav">
                 <ul class="nav-list">
@@ -50,7 +52,7 @@
             <!-- About Section -->
             <div class="about-content">
                 <div class="about-image" data-aos="fade-right">
-                    <img src="images/Lacey.jpg" alt="Lacey Richter Portrait" loading="eager">
+                    <img src="images/photo of myself/photo of myself/lacey.jpeg" alt="Lacey Richter Portrait" loading="eager">
                 </div>
                 
                 <div class="about-text" data-aos="fade-left">
@@ -124,7 +126,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-bio">
-                    <p>Photographer based in [Location], capturing life's most meaningful moments with an editorial eye and heartfelt approach.</p>
+                    <p>Photographer based in South Florida, capturing life's most meaningful moments with an editorial eye and heartfelt approach.</p>
                 </div>
                 <div class="footer-social">
                     <a href="https://instagram.com/bylaceyrichter" target="_blank" rel="noopener noreferrer" aria-label="Instagram">Instagram</a>
@@ -132,7 +134,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 By Lacey Richter. All rights reserved.</p>
+                <p>&copy; 2025 By Lacey Richter. All rights reserved.</p>
             </div>
         </div>
     </footer>
