--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <!-- Open Graph tags -->
     <meta property="og:title" content="Contact - By Lacey Richter">
     <meta property="og:description" content="Get in touch to discuss your photography session">
-    <meta property="og:image" content="/images/WEBSITE_COVER_PHOTO.jpg">
+    <meta property="og:image" content="/images/website cover photo/website cover photo/WEBSITE_COVER_PHOTO.jpg">
     <meta property="og:type" content="website">
     
     <!-- Fonts -->
@@ -24,7 +24,9 @@
     <header class="header" id="header">
         <div class="header-container">
             <div class="logo">
-                <a href="index.html">By Lacey Richter</a>
+                <a href="index.html">
+                    <img src="images/logo/logo.png" alt="By Lacey Richter Photography" />
+                </a>
             </div>
             <nav class="nav" id="nav">
                 <ul class="nav-list">
@@ -43,13 +45,26 @@
         </div>
     </header>
 
+    <!-- Page Hero -->
+    <section class="page-hero">
+        <div class="hero-image">
+            <img src="images/portraits cover pic/portraits cover pic/portrait.jpg" alt="Contact Photography" loading="eager">
+        </div>
+        <div class="hero-overlay">
+            <div class="hero-content">
+                <h1>Let's Connect</h1>
+                <p>Ready to capture your story? I'd love to hear about your vision</p>
+            </div>
+        </div>
+    </section>
+
     <!-- Page Content -->
-    <section class="page-content" style="margin-top: 80px;">
+    <section class="page-content">
         <div class="container">
             
             <!-- Header Section -->
             <div class="section-header">
-                <h1>Let's Connect</h1>
+                <h2>Get In Touch</h2>
                 <div class="section-divider"></div>
                 <p style="max-width: 600px; margin: 0 auto;">I'm so excited to learn about your vision and discuss how we can create something beautiful together. Please fill out the form below and I'll get back to you within 24 hours.</p>
             </div>
@@ -195,7 +210,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-bio">
-                    <p>Photographer based in [Location], capturing life's most meaningful moments with an editorial eye and heartfelt approach.</p>
+                    <p>Photographer based in South Florida, capturing life's most meaningful moments with an editorial eye and heartfelt approach.</p>
                 </div>
                 <div class="footer-social">
                     <a href="https://instagram.com/bylaceyrichter" target="_blank" rel="noopener noreferrer" aria-label="Instagram">Instagram</a>
@@ -203,7 +218,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 By Lacey Richter. All rights reserved.</p>
+                <p>&copy; 2025 By Lacey Richter. All rights reserved.</p>
             </div>
         </div>
     </footer>
