--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
     <!-- Page Hero -->
     <section class="page-hero" id="couples">
         <div class="hero-image">
-            <img src="images/couples cover pic/couples cover pic/couples_cover_pic.jpg" alt="Couples Photography" loading="eager">
+            <img src="images/Portfolio photos/Portfolio photos/portfolio (8).jpg" alt="Portfolio Photography" loading="eager">
         </div>
         <div class="hero-overlay">
             <div class="hero-content">
